Fixed button in Gigapet section

--- a/Less/landing-page.less
+++ b/Less/landing-page.less
@@ -144,7 +144,12 @@
                             width: 150px;
                         }
                     }
-                 }
+                }
+                  
+                @media @mobile {
+                        margin: 10px 0 10px 30px;
+                }
+                
            }
         }
     }
