--- a/Less/mobile.less
+++ b/Less/mobile.less
@@ -118,11 +118,6 @@ header {
                       }
                   }
 
-                  .gigapet-button {
-                       @media @mobile {
-                           margin: 10px 0 10px 30px;
-                       }
-                  }
               }
           }
            .phone-img {
@@ -138,4 +133,6 @@ header {
          flex-direction: column;
          align-items: center;
      }
+
+     
 }
